# takeout-fixer

./: .gitignore  CLAUDE.md  Cargo.toml  example.env  rustyrusty.rs
entity/: Cargo.toml
entity/src/: file_in_zip.rs  lib.rs  media_file.rs  mod.rs  prelude.rs  takeout_zip.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_tables.rs  m20241220_130409_create_file_table.rs  m20241230_130559_create_media_file_table.rs
src/: app.rs  db.rs  drive.rs  handler.rs  main.rs  media_utils.rs  ui.rs  widgets.rs
src/file_list_widget/: mod.rs  processing.rs  rendering.rs  ui_actions.rs
