[package]
name = "takeout_fixer"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".","entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs

oauth2 = "4.4.2"
gufo-exif = "0.1.3"
google-drive = "0.7.0"
serde_json = "1.0.133"
dotenv = "0.15.0"
reqwest = { version = "0.12.9" , default-features = true, features = ["stream"]}
serde = { version = "1.0.216", features = ["derive"] }
url = "2.5.4"
open = "5.3.1"
anyhow = "1.0.94"
dirs = "5.0.1"
chrono = "0.4.39"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
bytes = "1.9.0"
sea-orm = { version = "1.1.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
time = "0.3.37"
async_zip = { version = "0.0.17", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
