[package]
name = "takeout_fixer"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".","entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs

oauth2 = "5.0.0"
google-drive = "0.10.0"
serde_json = "1.0.149"
dotenv = "0.15.0"
reqwest = { version = "0.13.3", default-features = true, features = ["stream"]}
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.8"
open = "5.3.4"
anyhow = "1.0.102"
dirs = "6.0.0"
chrono = "0.4.44"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
sea-orm = { version = "2.0.0-rc.38", features = [ "runtime-tokio-rustls", "macros", "sqlx-postgres", "sqlx-sqlite"] }
async-compression = { version = "0.4.42", features = ["tokio", "gzip"] }
tokio-tar = "0.3.1"
tokio = { version = "1.52.2", features = ["full"] }
nom-exif = "2.8.0"